[project]
name = "coldmap"
version = "0.1.0"
description = "Creating heatmaps of daily records"
authors = [
    {name = "yzqzss", email = "yzqzss@yandex.com"},
]
dependencies = [
    "july @ git+https://github.com/thoellrich/july.git@fix-mpl.cbook.MatplotlibDepreciationWarning",
    "typing-extensions>=4.12.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "AGPL"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[project.scripts]
coldmap = "coldmap:main"
